# envdeps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
envdeps/: __init__.py  __main__.py  cli.py  common.py  dependencies.py  environment.py  formats.py  main.py  new.py  output.py  parse.py  pkgs.py  reqs.py  scanner.py  utils.py
envdeps/formatters/: base.py  pyproject.py  requirements.py
src/envdeps/: cli.py  common.py  detection.py  environment.py  ipynb.py  main.py  parse.py  pkgs.py  scanner.py
src/envdeps/formatters/: pyproject.py
tests/: test_analyzer.py  test_cases.py  test_cli.py  test_dependencies.py  test_environment.py  test_formatters.py  test_ipynb.py  test_merge_opts.py  test_scanner.py  test_unusual_formats.py
