[project]
name = "envdeps"
version = "0.1.0"
description = "Python project dependency analyzer that is enviornment-aware."
requires-python = ">=3.12"
authors = [{ name = "Dominic Mancini", email = "dominicgmancini@gmail.com" }]
dependencies = [
  "Pygments>=2.19.2",
  "loguru>=0.7.3",
  "packaging>=26.0",
  "rich>=14.3.3",
  "tomlkit>=0.14.0"
]

[project.scripts]
envdeps = "envdeps:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["envdeps", "tests"]
